# lama-super-bench

./: README.md
basics/: CMakeLists.txt  build.sh  run.sh
basics/regression/: test001.lama  test002.lama  test003.lama  test004.lama  test006.lama  test008.lama  test009.lama  test010.lama  test014.lama  test016.lama  test018.lama  test019.lama  test020.lama  test021.lama  test022.lama  test024.lama  test025.lama  test028.lama  test029.lama  test034.lama  test041.lama  test042.lama  test046.lama  test063.lama  test073.lama  test078.lama  test079.lama  test080.lama  test081.lama  test083.lama  test084.lama  test085.lama  test086.lama  test088.lama  test089.lama  test090.lama  test091.lama  test093.lama  test097.lama  test099.lama  (+6 more)
basics/runners/: runner_test001.c  runner_test002.c  runner_test003.c  runner_test004.c  runner_test005.c  runner_test006.c  runner_test007.c  runner_test008.c  runner_test009.c  runner_test010.c  runner_test011.c  runner_test012.c  runner_test013.c  runner_test014.c  runner_test015.c  runner_test016.c  runner_test017.c  runner_test018.c  runner_test019.c  runner_test020.c  runner_test021.c  runner_test022.c  runner_test023.c  runner_test024.c  runner_test025.c  runner_test026.c  runner_test027.c  runner_test028.c  runner_test029.c  runner_test034.c  runner_test036.c  runner_test040.c  runner_test041.c  runner_test042.c  runner_test045.c  runner_test046.c  runner_test050.c  runner_test054.c  runner_test059.c  runner_test063.c  (+35 more)
