cmake_minimum_required(VERSION 3.16)
project(lama_case_perf C)

add_executable(test001 runners/runner_test001.c)
set_target_properties(test001 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test001 PRIVATE m)
target_link_libraries(test001 PRIVATE ${CMAKE_SOURCE_DIR}/build/test001.o)
target_link_libraries(test001 PRIVATE ${CMAKE_SOURCE_DIR}/build/test001.x.o)
target_link_libraries(test001 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test002 runners/runner_test002.c)
set_target_properties(test002 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test002 PRIVATE m)
target_link_libraries(test002 PRIVATE ${CMAKE_SOURCE_DIR}/build/test002.o)
target_link_libraries(test002 PRIVATE ${CMAKE_SOURCE_DIR}/build/test002.x.o)
target_link_libraries(test002 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test003 runners/runner_test003.c)
set_target_properties(test003 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test003 PRIVATE m)
target_link_libraries(test003 PRIVATE ${CMAKE_SOURCE_DIR}/build/test003.o)
target_link_libraries(test003 PRIVATE ${CMAKE_SOURCE_DIR}/build/test003.x.o)
target_link_libraries(test003 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test004 runners/runner_test004.c)
set_target_properties(test004 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test004 PRIVATE m)
target_link_libraries(test004 PRIVATE ${CMAKE_SOURCE_DIR}/build/test004.o)
target_link_libraries(test004 PRIVATE ${CMAKE_SOURCE_DIR}/build/test004.x.o)
target_link_libraries(test004 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test005 runners/runner_test005.c)
set_target_properties(test005 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test005 PRIVATE m)
target_link_libraries(test005 PRIVATE ${CMAKE_SOURCE_DIR}/build/test005.o)
target_link_libraries(test005 PRIVATE ${CMAKE_SOURCE_DIR}/build/test005.x.o)
target_link_libraries(test005 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test006 runners/runner_test006.c)
set_target_properties(test006 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test006 PRIVATE m)
target_link_libraries(test006 PRIVATE ${CMAKE_SOURCE_DIR}/build/test006.o)
target_link_libraries(test006 PRIVATE ${CMAKE_SOURCE_DIR}/build/test006.x.o)
target_link_libraries(test006 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test007 runners/runner_test007.c)
set_target_properties(test007 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test007 PRIVATE m)
target_link_libraries(test007 PRIVATE ${CMAKE_SOURCE_DIR}/build/test007.o)
target_link_libraries(test007 PRIVATE ${CMAKE_SOURCE_DIR}/build/test007.x.o)
target_link_libraries(test007 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test008 runners/runner_test008.c)
set_target_properties(test008 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test008 PRIVATE m)
target_link_libraries(test008 PRIVATE ${CMAKE_SOURCE_DIR}/build/test008.o)
target_link_libraries(test008 PRIVATE ${CMAKE_SOURCE_DIR}/build/test008.x.o)
target_link_libraries(test008 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test009 runners/runner_test009.c)
set_target_properties(test009 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test009 PRIVATE m)
target_link_libraries(test009 PRIVATE ${CMAKE_SOURCE_DIR}/build/test009.o)
target_link_libraries(test009 PRIVATE ${CMAKE_SOURCE_DIR}/build/test009.x.o)
target_link_libraries(test009 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test010 runners/runner_test010.c)
set_target_properties(test010 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test010 PRIVATE m)
target_link_libraries(test010 PRIVATE ${CMAKE_SOURCE_DIR}/build/test010.o)
target_link_libraries(test010 PRIVATE ${CMAKE_SOURCE_DIR}/build/test010.x.o)
target_link_libraries(test010 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test011 runners/runner_test011.c)
set_target_properties(test011 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test011 PRIVATE m)
target_link_libraries(test011 PRIVATE ${CMAKE_SOURCE_DIR}/build/test011.o)
target_link_libraries(test011 PRIVATE ${CMAKE_SOURCE_DIR}/build/test011.x.o)
target_link_libraries(test011 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test012 runners/runner_test012.c)
set_target_properties(test012 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test012 PRIVATE m)
target_link_libraries(test012 PRIVATE ${CMAKE_SOURCE_DIR}/build/test012.o)
target_link_libraries(test012 PRIVATE ${CMAKE_SOURCE_DIR}/build/test012.x.o)
target_link_libraries(test012 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test013 runners/runner_test013.c)
set_target_properties(test013 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test013 PRIVATE m)
target_link_libraries(test013 PRIVATE ${CMAKE_SOURCE_DIR}/build/test013.o)
target_link_libraries(test013 PRIVATE ${CMAKE_SOURCE_DIR}/build/test013.x.o)
target_link_libraries(test013 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test014 runners/runner_test014.c)
set_target_properties(test014 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test014 PRIVATE m)
target_link_libraries(test014 PRIVATE ${CMAKE_SOURCE_DIR}/build/test014.o)
target_link_libraries(test014 PRIVATE ${CMAKE_SOURCE_DIR}/build/test014.x.o)
target_link_libraries(test014 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test015 runners/runner_test015.c)
set_target_properties(test015 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test015 PRIVATE m)
target_link_libraries(test015 PRIVATE ${CMAKE_SOURCE_DIR}/build/test015.o)
target_link_libraries(test015 PRIVATE ${CMAKE_SOURCE_DIR}/build/test015.x.o)
target_link_libraries(test015 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test016 runners/runner_test016.c)
set_target_properties(test016 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test016 PRIVATE m)
target_link_libraries(test016 PRIVATE ${CMAKE_SOURCE_DIR}/build/test016.o)
target_link_libraries(test016 PRIVATE ${CMAKE_SOURCE_DIR}/build/test016.x.o)
target_link_libraries(test016 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test017 runners/runner_test017.c)
set_target_properties(test017 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test017 PRIVATE m)
target_link_libraries(test017 PRIVATE ${CMAKE_SOURCE_DIR}/build/test017.o)
target_link_libraries(test017 PRIVATE ${CMAKE_SOURCE_DIR}/build/test017.x.o)
target_link_libraries(test017 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test018 runners/runner_test018.c)
set_target_properties(test018 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test018 PRIVATE m)
target_link_libraries(test018 PRIVATE ${CMAKE_SOURCE_DIR}/build/test018.o)
target_link_libraries(test018 PRIVATE ${CMAKE_SOURCE_DIR}/build/test018.x.o)
target_link_libraries(test018 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test019 runners/runner_test019.c)
set_target_properties(test019 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test019 PRIVATE m)
target_link_libraries(test019 PRIVATE ${CMAKE_SOURCE_DIR}/build/test019.o)
target_link_libraries(test019 PRIVATE ${CMAKE_SOURCE_DIR}/build/test019.x.o)
target_link_libraries(test019 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test020 runners/runner_test020.c)
set_target_properties(test020 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test020 PRIVATE m)
target_link_libraries(test020 PRIVATE ${CMAKE_SOURCE_DIR}/build/test020.o)
target_link_libraries(test020 PRIVATE ${CMAKE_SOURCE_DIR}/build/test020.x.o)
target_link_libraries(test020 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test021 runners/runner_test021.c)
set_target_properties(test021 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test021 PRIVATE m)
target_link_libraries(test021 PRIVATE ${CMAKE_SOURCE_DIR}/build/test021.o)
target_link_libraries(test021 PRIVATE ${CMAKE_SOURCE_DIR}/build/test021.x.o)
target_link_libraries(test021 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test022 runners/runner_test022.c)
set_target_properties(test022 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test022 PRIVATE m)
target_link_libraries(test022 PRIVATE ${CMAKE_SOURCE_DIR}/build/test022.o)
target_link_libraries(test022 PRIVATE ${CMAKE_SOURCE_DIR}/build/test022.x.o)
target_link_libraries(test022 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test023 runners/runner_test023.c)
set_target_properties(test023 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test023 PRIVATE m)
target_link_libraries(test023 PRIVATE ${CMAKE_SOURCE_DIR}/build/test023.o)
target_link_libraries(test023 PRIVATE ${CMAKE_SOURCE_DIR}/build/test023.x.o)
target_link_libraries(test023 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test024 runners/runner_test024.c)
set_target_properties(test024 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test024 PRIVATE m)
target_link_libraries(test024 PRIVATE ${CMAKE_SOURCE_DIR}/build/test024.o)
target_link_libraries(test024 PRIVATE ${CMAKE_SOURCE_DIR}/build/test024.x.o)
target_link_libraries(test024 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test025 runners/runner_test025.c)
set_target_properties(test025 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test025 PRIVATE m)
target_link_libraries(test025 PRIVATE ${CMAKE_SOURCE_DIR}/build/test025.o)
target_link_libraries(test025 PRIVATE ${CMAKE_SOURCE_DIR}/build/test025.x.o)
target_link_libraries(test025 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test026 runners/runner_test026.c)
set_target_properties(test026 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test026 PRIVATE m)
target_link_libraries(test026 PRIVATE ${CMAKE_SOURCE_DIR}/build/test026.o)
target_link_libraries(test026 PRIVATE ${CMAKE_SOURCE_DIR}/build/test026.x.o)
target_link_libraries(test026 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test027 runners/runner_test027.c)
set_target_properties(test027 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test027 PRIVATE m)
target_link_libraries(test027 PRIVATE ${CMAKE_SOURCE_DIR}/build/test027.o)
target_link_libraries(test027 PRIVATE ${CMAKE_SOURCE_DIR}/build/test027.x.o)
target_link_libraries(test027 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test028 runners/runner_test028.c)
set_target_properties(test028 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test028 PRIVATE m)
target_link_libraries(test028 PRIVATE ${CMAKE_SOURCE_DIR}/build/test028.o)
target_link_libraries(test028 PRIVATE ${CMAKE_SOURCE_DIR}/build/test028.x.o)
target_link_libraries(test028 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test029 runners/runner_test029.c)
set_target_properties(test029 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test029 PRIVATE m)
target_link_libraries(test029 PRIVATE ${CMAKE_SOURCE_DIR}/build/test029.o)
target_link_libraries(test029 PRIVATE ${CMAKE_SOURCE_DIR}/build/test029.x.o)
target_link_libraries(test029 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test034 runners/runner_test034.c)
set_target_properties(test034 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test034 PRIVATE m)
target_link_libraries(test034 PRIVATE ${CMAKE_SOURCE_DIR}/build/test034.o)
target_link_libraries(test034 PRIVATE ${CMAKE_SOURCE_DIR}/build/test034.x.o)
target_link_libraries(test034 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test036 runners/runner_test036.c)
set_target_properties(test036 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test036 PRIVATE m)
target_link_libraries(test036 PRIVATE ${CMAKE_SOURCE_DIR}/build/test036.o)
target_link_libraries(test036 PRIVATE ${CMAKE_SOURCE_DIR}/build/test036.x.o)
target_link_libraries(test036 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test040 runners/runner_test040.c)
set_target_properties(test040 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test040 PRIVATE m)
target_link_libraries(test040 PRIVATE ${CMAKE_SOURCE_DIR}/build/test040.o)
target_link_libraries(test040 PRIVATE ${CMAKE_SOURCE_DIR}/build/test040.x.o)
target_link_libraries(test040 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test041 runners/runner_test041.c)
set_target_properties(test041 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test041 PRIVATE m)
target_link_libraries(test041 PRIVATE ${CMAKE_SOURCE_DIR}/build/test041.o)
target_link_libraries(test041 PRIVATE ${CMAKE_SOURCE_DIR}/build/test041.x.o)
target_link_libraries(test041 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test042 runners/runner_test042.c)
set_target_properties(test042 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test042 PRIVATE m)
target_link_libraries(test042 PRIVATE ${CMAKE_SOURCE_DIR}/build/test042.o)
target_link_libraries(test042 PRIVATE ${CMAKE_SOURCE_DIR}/build/test042.x.o)
target_link_libraries(test042 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test045 runners/runner_test045.c)
set_target_properties(test045 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test045 PRIVATE m)
target_link_libraries(test045 PRIVATE ${CMAKE_SOURCE_DIR}/build/test045.o)
target_link_libraries(test045 PRIVATE ${CMAKE_SOURCE_DIR}/build/test045.x.o)
target_link_libraries(test045 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test046 runners/runner_test046.c)
set_target_properties(test046 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test046 PRIVATE m)
target_link_libraries(test046 PRIVATE ${CMAKE_SOURCE_DIR}/build/test046.o)
target_link_libraries(test046 PRIVATE ${CMAKE_SOURCE_DIR}/build/test046.x.o)
target_link_libraries(test046 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test050 runners/runner_test050.c)
set_target_properties(test050 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test050 PRIVATE m)
target_link_libraries(test050 PRIVATE ${CMAKE_SOURCE_DIR}/build/test050.o)
target_link_libraries(test050 PRIVATE ${CMAKE_SOURCE_DIR}/build/test050.x.o)
target_link_libraries(test050 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test054 runners/runner_test054.c)
set_target_properties(test054 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test054 PRIVATE m)
target_link_libraries(test054 PRIVATE ${CMAKE_SOURCE_DIR}/build/test054.o)
target_link_libraries(test054 PRIVATE ${CMAKE_SOURCE_DIR}/build/test054.x.o)
target_link_libraries(test054 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test059 runners/runner_test059.c)
set_target_properties(test059 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test059 PRIVATE m)
target_link_libraries(test059 PRIVATE ${CMAKE_SOURCE_DIR}/build/test059.o)
target_link_libraries(test059 PRIVATE ${CMAKE_SOURCE_DIR}/build/test059.x.o)
target_link_libraries(test059 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test063 runners/runner_test063.c)
set_target_properties(test063 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test063 PRIVATE m)
target_link_libraries(test063 PRIVATE ${CMAKE_SOURCE_DIR}/build/test063.o)
target_link_libraries(test063 PRIVATE ${CMAKE_SOURCE_DIR}/build/test063.x.o)
target_link_libraries(test063 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test072 runners/runner_test072.c)
set_target_properties(test072 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test072 PRIVATE m)
target_link_libraries(test072 PRIVATE ${CMAKE_SOURCE_DIR}/build/test072.o)
target_link_libraries(test072 PRIVATE ${CMAKE_SOURCE_DIR}/build/test072.x.o)
target_link_libraries(test072 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test073 runners/runner_test073.c)
set_target_properties(test073 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test073 PRIVATE m)
target_link_libraries(test073 PRIVATE ${CMAKE_SOURCE_DIR}/build/test073.o)
target_link_libraries(test073 PRIVATE ${CMAKE_SOURCE_DIR}/build/test073.x.o)
target_link_libraries(test073 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test074 runners/runner_test074.c)
set_target_properties(test074 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test074 PRIVATE m)
target_link_libraries(test074 PRIVATE ${CMAKE_SOURCE_DIR}/build/test074.o)
target_link_libraries(test074 PRIVATE ${CMAKE_SOURCE_DIR}/build/test074.x.o)
target_link_libraries(test074 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test077 runners/runner_test077.c)
set_target_properties(test077 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test077 PRIVATE m)
target_link_libraries(test077 PRIVATE ${CMAKE_SOURCE_DIR}/build/test077.o)
target_link_libraries(test077 PRIVATE ${CMAKE_SOURCE_DIR}/build/test077.x.o)
target_link_libraries(test077 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test078 runners/runner_test078.c)
set_target_properties(test078 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test078 PRIVATE m)
target_link_libraries(test078 PRIVATE ${CMAKE_SOURCE_DIR}/build/test078.o)
target_link_libraries(test078 PRIVATE ${CMAKE_SOURCE_DIR}/build/test078.x.o)
target_link_libraries(test078 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test079 runners/runner_test079.c)
set_target_properties(test079 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test079 PRIVATE m)
target_link_libraries(test079 PRIVATE ${CMAKE_SOURCE_DIR}/build/test079.o)
target_link_libraries(test079 PRIVATE ${CMAKE_SOURCE_DIR}/build/test079.x.o)
target_link_libraries(test079 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test080 runners/runner_test080.c)
set_target_properties(test080 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test080 PRIVATE m)
target_link_libraries(test080 PRIVATE ${CMAKE_SOURCE_DIR}/build/test080.o)
target_link_libraries(test080 PRIVATE ${CMAKE_SOURCE_DIR}/build/test080.x.o)
target_link_libraries(test080 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test081 runners/runner_test081.c)
set_target_properties(test081 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test081 PRIVATE m)
target_link_libraries(test081 PRIVATE ${CMAKE_SOURCE_DIR}/build/test081.o)
target_link_libraries(test081 PRIVATE ${CMAKE_SOURCE_DIR}/build/test081.x.o)
target_link_libraries(test081 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test082 runners/runner_test082.c)
set_target_properties(test082 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test082 PRIVATE m)
target_link_libraries(test082 PRIVATE ${CMAKE_SOURCE_DIR}/build/test082.o)
target_link_libraries(test082 PRIVATE ${CMAKE_SOURCE_DIR}/build/test082.x.o)
target_link_libraries(test082 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test083 runners/runner_test083.c)
set_target_properties(test083 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test083 PRIVATE m)
target_link_libraries(test083 PRIVATE ${CMAKE_SOURCE_DIR}/build/test083.o)
target_link_libraries(test083 PRIVATE ${CMAKE_SOURCE_DIR}/build/test083.x.o)
target_link_libraries(test083 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test084 runners/runner_test084.c)
set_target_properties(test084 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test084 PRIVATE m)
target_link_libraries(test084 PRIVATE ${CMAKE_SOURCE_DIR}/build/test084.o)
target_link_libraries(test084 PRIVATE ${CMAKE_SOURCE_DIR}/build/test084.x.o)
target_link_libraries(test084 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test085 runners/runner_test085.c)
set_target_properties(test085 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test085 PRIVATE m)
target_link_libraries(test085 PRIVATE ${CMAKE_SOURCE_DIR}/build/test085.o)
target_link_libraries(test085 PRIVATE ${CMAKE_SOURCE_DIR}/build/test085.x.o)
target_link_libraries(test085 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test086 runners/runner_test086.c)
set_target_properties(test086 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test086 PRIVATE m)
target_link_libraries(test086 PRIVATE ${CMAKE_SOURCE_DIR}/build/test086.o)
target_link_libraries(test086 PRIVATE ${CMAKE_SOURCE_DIR}/build/test086.x.o)
target_link_libraries(test086 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test088 runners/runner_test088.c)
set_target_properties(test088 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test088 PRIVATE m)
target_link_libraries(test088 PRIVATE ${CMAKE_SOURCE_DIR}/build/test088.o)
target_link_libraries(test088 PRIVATE ${CMAKE_SOURCE_DIR}/build/test088.x.o)
target_link_libraries(test088 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test089 runners/runner_test089.c)
set_target_properties(test089 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test089 PRIVATE m)
target_link_libraries(test089 PRIVATE ${CMAKE_SOURCE_DIR}/build/test089.o)
target_link_libraries(test089 PRIVATE ${CMAKE_SOURCE_DIR}/build/test089.x.o)
target_link_libraries(test089 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test090 runners/runner_test090.c)
set_target_properties(test090 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test090 PRIVATE m)
target_link_libraries(test090 PRIVATE ${CMAKE_SOURCE_DIR}/build/test090.o)
target_link_libraries(test090 PRIVATE ${CMAKE_SOURCE_DIR}/build/test090.x.o)
target_link_libraries(test090 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test091 runners/runner_test091.c)
set_target_properties(test091 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test091 PRIVATE m)
target_link_libraries(test091 PRIVATE ${CMAKE_SOURCE_DIR}/build/test091.o)
target_link_libraries(test091 PRIVATE ${CMAKE_SOURCE_DIR}/build/test091.x.o)
target_link_libraries(test091 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test092 runners/runner_test092.c)
set_target_properties(test092 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test092 PRIVATE m)
target_link_libraries(test092 PRIVATE ${CMAKE_SOURCE_DIR}/build/test092.o)
target_link_libraries(test092 PRIVATE ${CMAKE_SOURCE_DIR}/build/test092.x.o)
target_link_libraries(test092 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test093 runners/runner_test093.c)
set_target_properties(test093 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test093 PRIVATE m)
target_link_libraries(test093 PRIVATE ${CMAKE_SOURCE_DIR}/build/test093.o)
target_link_libraries(test093 PRIVATE ${CMAKE_SOURCE_DIR}/build/test093.x.o)
target_link_libraries(test093 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test094 runners/runner_test094.c)
set_target_properties(test094 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test094 PRIVATE m)
target_link_libraries(test094 PRIVATE ${CMAKE_SOURCE_DIR}/build/test094.o)
target_link_libraries(test094 PRIVATE ${CMAKE_SOURCE_DIR}/build/test094.x.o)
target_link_libraries(test094 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test095 runners/runner_test095.c)
set_target_properties(test095 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test095 PRIVATE m)
target_link_libraries(test095 PRIVATE ${CMAKE_SOURCE_DIR}/build/test095.o)
target_link_libraries(test095 PRIVATE ${CMAKE_SOURCE_DIR}/build/test095.x.o)
target_link_libraries(test095 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test096 runners/runner_test096.c)
set_target_properties(test096 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test096 PRIVATE m)
target_link_libraries(test096 PRIVATE ${CMAKE_SOURCE_DIR}/build/test096.o)
target_link_libraries(test096 PRIVATE ${CMAKE_SOURCE_DIR}/build/test096.x.o)
target_link_libraries(test096 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test097 runners/runner_test097.c)
set_target_properties(test097 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test097 PRIVATE m)
target_link_libraries(test097 PRIVATE ${CMAKE_SOURCE_DIR}/build/test097.o)
target_link_libraries(test097 PRIVATE ${CMAKE_SOURCE_DIR}/build/test097.x.o)
target_link_libraries(test097 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test098 runners/runner_test098.c)
set_target_properties(test098 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test098 PRIVATE m)
target_link_libraries(test098 PRIVATE ${CMAKE_SOURCE_DIR}/build/test098.o)
target_link_libraries(test098 PRIVATE ${CMAKE_SOURCE_DIR}/build/test098.x.o)
target_link_libraries(test098 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test099 runners/runner_test099.c)
set_target_properties(test099 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test099 PRIVATE m)
target_link_libraries(test099 PRIVATE ${CMAKE_SOURCE_DIR}/build/test099.o)
target_link_libraries(test099 PRIVATE ${CMAKE_SOURCE_DIR}/build/test099.x.o)
target_link_libraries(test099 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test100 runners/runner_test100.c)
set_target_properties(test100 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test100 PRIVATE m)
target_link_libraries(test100 PRIVATE ${CMAKE_SOURCE_DIR}/build/test100.o)
target_link_libraries(test100 PRIVATE ${CMAKE_SOURCE_DIR}/build/test100.x.o)
target_link_libraries(test100 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test101 runners/runner_test101.c)
set_target_properties(test101 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test101 PRIVATE m)
target_link_libraries(test101 PRIVATE ${CMAKE_SOURCE_DIR}/build/test101.o)
target_link_libraries(test101 PRIVATE ${CMAKE_SOURCE_DIR}/build/test101.x.o)
target_link_libraries(test101 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test102 runners/runner_test102.c)
set_target_properties(test102 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test102 PRIVATE m)
target_link_libraries(test102 PRIVATE ${CMAKE_SOURCE_DIR}/build/test102.o)
target_link_libraries(test102 PRIVATE ${CMAKE_SOURCE_DIR}/build/test102.x.o)
target_link_libraries(test102 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test103 runners/runner_test103.c)
set_target_properties(test103 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test103 PRIVATE m)
target_link_libraries(test103 PRIVATE ${CMAKE_SOURCE_DIR}/build/test103.o)
target_link_libraries(test103 PRIVATE ${CMAKE_SOURCE_DIR}/build/test103.x.o)
target_link_libraries(test103 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test104 runners/runner_test104.c)
set_target_properties(test104 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test104 PRIVATE m)
target_link_libraries(test104 PRIVATE ${CMAKE_SOURCE_DIR}/build/test104.o)
target_link_libraries(test104 PRIVATE ${CMAKE_SOURCE_DIR}/build/test104.x.o)
target_link_libraries(test104 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test105 runners/runner_test105.c)
set_target_properties(test105 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test105 PRIVATE m)
target_link_libraries(test105 PRIVATE ${CMAKE_SOURCE_DIR}/build/test105.o)
target_link_libraries(test105 PRIVATE ${CMAKE_SOURCE_DIR}/build/test105.x.o)
target_link_libraries(test105 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test106 runners/runner_test106.c)
set_target_properties(test106 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test106 PRIVATE m)
target_link_libraries(test106 PRIVATE ${CMAKE_SOURCE_DIR}/build/test106.o)
target_link_libraries(test106 PRIVATE ${CMAKE_SOURCE_DIR}/build/test106.x.o)
target_link_libraries(test106 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test107 runners/runner_test107.c)
set_target_properties(test107 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test107 PRIVATE m)
target_link_libraries(test107 PRIVATE ${CMAKE_SOURCE_DIR}/build/test107.o)
target_link_libraries(test107 PRIVATE ${CMAKE_SOURCE_DIR}/build/test107.x.o)
target_link_libraries(test107 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test110 runners/runner_test110.c)
set_target_properties(test110 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test110 PRIVATE m)
target_link_libraries(test110 PRIVATE ${CMAKE_SOURCE_DIR}/build/test110.o)
target_link_libraries(test110 PRIVATE ${CMAKE_SOURCE_DIR}/build/test110.x.o)
target_link_libraries(test110 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)

add_executable(test111 runners/runner_test111.c)
set_target_properties(test111 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
target_link_libraries(test111 PRIVATE m)
target_link_libraries(test111 PRIVATE ${CMAKE_SOURCE_DIR}/build/test111.o)
target_link_libraries(test111 PRIVATE ${CMAKE_SOURCE_DIR}/build/test111.x.o)
target_link_libraries(test111 PRIVATE ${CMAKE_SOURCE_DIR}/lib/libsilence.a)


